# defense-open

./: .gitignore  Cargo.toml  PRIVACY.md  README.md  SECURITY.md  checkpoints.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/defense-core/: Cargo.toml
crates/defense-core/src/p2p/: intel_gossip.rs  mod.rs
crates/defense-core/src/report/: features.rs  mod.rs
crates/defense-core/src/rules/: engine.rs
crates/defense-core/src/scan/: file_analysis.rs  mod.rs  runner.rs
crates/defense-daemon/: Cargo.toml
crates/defense-daemon/src/: fs_watcher.rs  ipc.rs  ipc_types.rs  lib.rs  main.rs  service.rs
crates/defense-ml/: Cargo.toml
crates/defense-ml/src/: lib.rs
crates/panicscan-cli/: Cargo.toml
crates/panicscan-cli/src/: ipc_client.rs  main.rs  ui.rs
crates/panicscan-core/: Cargo.toml
crates/panicscan-core/src/: lib.rs
crates/panicscan-core/src/analyzers/: network.rs
crates/panicscan-core/src/report/: html.rs
crates/panicscan-core/src/scan/: file_analysis.rs  planner.rs
crates/panicscan-core/tests/: quick_scan.rs
crates/panicscan-daemon/: Cargo.toml
crates/panicscan-daemon/src/: fs_watcher.rs  ipc.rs  lib.rs  state.rs
crates/panicscan-ml/: Cargo.toml
defense-agent/: Cargo.toml
defense-agent/src/: alert.rs  main.rs
defense-core/: Cargo.toml
defense-core/src/: collector.rs  event.rs  event_sink.rs  lib.rs  log.rs  log_rotation.rs  rule_engine.rs
defense-core/src/collectors/: filesystem.rs  mod.rs  network.rs  process.rs  registry.rs  usb.rs
defense-core/src/rules/: engine.rs  loader.rs  schema.rs
docs/: feature-schema-v1.json  report-schema-v1.json
installer/: com.panicscan.daemon.plist  panicscan.service  panicscan.wxs
ml_pipeline/: generate_dataset.py  panicscan_dataset.csv  requirements.txt  train_rf.py
rules/: filesystem.toml  network.toml  process.toml  registry.toml  usb.toml
scripts/: evidence_next_steps.sh  repository_readiness_fixture_test.sh  windows_sign.ps1  windows_verify_signature.ps1
