[workspace]
resolver = "2"
members = [
  "crates/defense-core",
  
  "crates/defense-daemon"
, "crates/defense-ml"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/kingkyylian/panic-scan"

[workspace.dependencies]
anyhow = "1"
indicatif = "0.17"
owo-colors = "4"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
goblin = "0.9"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.30"
tempfile = "3"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
winreg = "0.52"
tokio = { version = "1", features = ["full"] }
notify = { version = "6", features = ["serde"] }
notify-debouncer-mini = "0.4"
windows-service = "0.7"

windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_ProcessStatus",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_Shell"
] }

