[package]
name = "defense-agent"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Defense XDR — community endpoint agent"

[dependencies]
defense-core = { path = "../defense-core" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
