[package]
name = "panicscan"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "panicscan"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
indicatif.workspace = true
owo-colors.workspace = true
panicscan-core = { path = "../panicscan-core" }
panicscan-daemon = { path = "../panicscan-daemon" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
